--- a/app/src/main/res/layout/activity_viewpic.xml
+++ b/app/src/main/res/layout/activity_viewpic.xml
@@ -5,125 +5,135 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#CC404040"
+    android:orientation="vertical"
     >
 
     <ImageButton
         android:id="@+id/floatingActionButton"
         android:layout_width="39dp"
         android:layout_height="40dp"
-        android:clickable="true"
         android:layout_gravity="right"
         android:layout_margin="5dp"
-        android:onClick="close"
         android:background="?android:selectableItemBackground"
+        android:clickable="true"
+        android:onClick="close"
         app:srcCompat="@drawable/close24px" />
 
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_gravity="center"
-        android:src="@drawable/taylor"
-        android:background="?android:selectableItemBackground"/>
+        android:background="?android:selectableItemBackground"
+        android:src="@drawable/taylor"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginBottom="6dp">
-
-        <TextView
-            android:id="@+id/tv_username"
-            android:layout_width="120dp"
+        <LinearLayout
+            android:layout_width="327dp"
             android:layout_height="wrap_content"
-            android:text="@string/photographer"
-            android:textColor="#FFF"
-            android:textStyle="bold"/>
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_username_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFF"
-            android:text="Ferran Devesa" />
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="6dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="6dp"
+                android:layout_marginBottom="6dp"
+                android:gravity=""
+                android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:textColor="#FFF"
-            android:text="@string/title"
-            android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/tv_username"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/photographer"
+                    android:textColor="#FFF"
+                    android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_descripcion_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFF"
-            android:text="Taylor Hill"
-            />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_username_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ferran Devesa"
+                    android:textColor="#FFF" />
+            </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="6dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_category"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:textColor="#FFF"
-            android:text="@string/category"
-            android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/title"
+                    android:textColor="#FFF"
+                    android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_category_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFF"
-            android:text="Ladies" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_descripcion_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Taylor Hill"
+                    android:textColor="#FFF" />
+            </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="6dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_location"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:textColor="#FFF"
-            android:text="@string/location"
-            android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/tv_category"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/category"
+                    android:textColor="#FFF"
+                    android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_location_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFF"
-            android:text="USA" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_category_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ladies"
+                    android:textColor="#FFF" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_location"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/location"
+                    android:textColor="#FFF"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_location_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="USA"
+                    android:textColor="#FFF" />
+            </LinearLayout>
+        </LinearLayout>
+
 </LinearLayout>
 </LinearLayout>
